--- a/index.html
+++ b/index.html
@@ -91,42 +91,42 @@
                 <p class="font__400-18 color__black text-align__center">Whether you want to get organized, keep your personal life on track, or boost workplace productivity, Evernote has the right plan for you.</p>
                 <img class="position__absolute z-index__2 section-fourth__Choose-Your-Plan--highlight-image" src="./assets/images/section-fourth__Choose-Your-Plan--highlight-image.png" />
             </div>
-            <div class="section-fourth__Choose-Your-Plan--Free-Personal-Organization">
-                <div class="section-fourth__Choose-Your-Plan--Free">
-                    <p class="font__600-24 color__black margin__25">Free</p>
-                    <p class="font__700-36 color__black margin__25">$0</p>
-                    <p class="font__500-18 color__black margin__25">Capture ideas and find them quickly</p>
-                    <p class="display__center font__400-16 color__black margin__28"><img class="circle-check" src="./assets/images/circle-check-Free.png" />Sync unlimited devices</p>
-                    <p class="display__center font__400-16 color__black margin__28"><img class="circle-check" src="./assets/images/circle-check-Free.png" />10 GB monthly uploads</p>
-                    <p class="display__center font__400-16 color__black margin__28"><img class="circle-check" src="./assets/images/circle-check-Free.png" />200 MB max. note size</p>
-                    <p class="display__center font__400-16 color__black margin__28"><img class="circle-check" src="./assets/images/circle-check-Free.png" />Customize Home dashboard and access extra widgets</p>
-                    <p class="display__center font__400-16 color__black margin__28"><img class="circle-check" src="./assets/images/circle-check-Free.png" />Connect primary Google Calendar account</p>
-                    <p class="display__center font__400-16 color__black margin__25"><img class="circle-check" src="./assets/images/circle-check-Free.png" />Add due dates, reminders, and notifications to your tasks</p>
-                    <button class="section-fourth__Choose-Your-Plan--Free-button">Get Started</button>
+            <div class="section-fourth__Choose-Your-Plan--container">
+                <div class="section-fourth__Choose-Your-Plan--container-part">
+                    <div class="section-fourth__Choose-Your-Plan--container-title font__600-24 color__black margin__25">Free</div>
+                    <div class="section-fourth__Choose-Your-Plan--container-title font__700-36 color__black margin__25">$0</div>
+                    <div class="section-fourth__Choose-Your-Plan--container-title font__500-18 color__black margin__25">Capture ideas and find them quickly</div>
+                    <div class="section-fourth__Choose-Your-Plan--container-line display__center margin__28"><div class="section-fourth__Choose-Your-Plan--container-mark"></div><div class="section-fourth__Choose-Your-Plan--container-content font__400-16 color__black">Sync unlimited devices</div></div>
+                    <div class="section-fourth__Choose-Your-Plan--container-line display__center margin__28"><div class="section-fourth__Choose-Your-Plan--container-mark"></div><div class="section-fourth__Choose-Your-Plan--container-content font__400-16 color__black">10 GB monthly uploads</div></div>
+                    <div class="section-fourth__Choose-Your-Plan--container-line display__center margin__28"><div class="section-fourth__Choose-Your-Plan--container-mark"></div><div class="section-fourth__Choose-Your-Plan--container-content font__400-16 color__black">200 MB max. note size</div></div>
+                    <div class="section-fourth__Choose-Your-Plan--container-line display__center margin__28"><div class="section-fourth__Choose-Your-Plan--container-mark"></div><div class="section-fourth__Choose-Your-Plan--container-content font__400-16 color__black">Customize Home dashboard and access extra widgets</div></div>
+                    <div class="section-fourth__Choose-Your-Plan--container-line display__center margin__28"><div class="section-fourth__Choose-Your-Plan--container-mark"></div><div class="section-fourth__Choose-Your-Plan--container-content font__400-16 color__black">Connect primary Google Calendar account</div></div>
+                    <div class="section-fourth__Choose-Your-Plan--container-line display__center margin__25"><div class="section-fourth__Choose-Your-Plan--container-mark"></div><div class="section-fourth__Choose-Your-Plan--container-content font__400-16 color__black">Add due dates, reminders, and notifications to your tasks</div></div>
+                    <button class="section-fourth__Choose-Your-Plan--container-button">Get Started</button>
                 </div>
-                <div class="section-fourth__Choose-Your-Plan--Personal">
-                    <p class="font__600-24 color__white margin__25">Personal</p>
-                    <p class="font__700-36 color__yellow margin__25">$11.99</p>
-                    <p class="font__500-18 color__white margin__25">Keep home and family on track</p>
-                    <p class="display__center font__500-18 color__white margin__28"><img class="circle-check" src="./assets/images/circle-check-Personal.png" />Sync unlimited devices</p>
-                    <p class="display__center font__500-18 color__white margin__28"><img class="circle-check" src="./assets/images/circle-check-Personal.png" />10 GB monthly uploads</p>
-                    <p class="display__center font__500-18 color__white margin__28"><img class="circle-check" src="./assets/images/circle-check-Personal.png" />200 MB max. note size</p>
-                    <p class="display__center font__500-18 color__white margin__28"><img class="circle-check" src="./assets/images/circle-check-Personal.png" />Customize Home dashboard and access extra widgets</p>
-                    <p class="display__center font__500-18 color__white margin__28"><img class="circle-check" src="./assets/images/circle-check-Personal.png" />Connect primary Google Calendar account</p>
-                    <p class="display__center font__500-18 color__white margin__25"><img class="circle-check" src="./assets/images/circle-check-Personal.png" />Add due dates, reminders, and notifications to your tasks</p>
-                    <button class="section-fourth__Choose-Your-Plan--Personal-button">Get Started</button>
+                <div class="section-fourth__Choose-Your-Plan--container-part">
+                    <div class="section-fourth__Choose-Your-Plan--container-title font__600-24 color__black margin__25">Personal</div>
+                    <div class="section-fourth__Choose-Your-Plan--container-title font__700-36 color__black margin__25">$11.99</div>
+                    <div class="section-fourth__Choose-Your-Plan--container-title font__500-18 color__black margin__25">Keep home and family on track</div>
+                    <div class="section-fourth__Choose-Your-Plan--container-line display__center margin__28"><div class="section-fourth__Choose-Your-Plan--container-mark"></div><div class="section-fourth__Choose-Your-Plan--container-content font__400-16 color__black">Sync unlimited devices</div></div>
+                    <div class="section-fourth__Choose-Your-Plan--container-line display__center margin__28"><div class="section-fourth__Choose-Your-Plan--container-mark"></div><div class="section-fourth__Choose-Your-Plan--container-content font__400-16 color__black">10 GB monthly uploads</div></div>
+                    <div class="section-fourth__Choose-Your-Plan--container-line display__center margin__28"><div class="section-fourth__Choose-Your-Plan--container-mark"></div><div class="section-fourth__Choose-Your-Plan--container-content font__400-16 color__black">200 MB max. note size</div></div>
+                    <div class="section-fourth__Choose-Your-Plan--container-line display__center margin__28"><div class="section-fourth__Choose-Your-Plan--container-mark"></div><div class="section-fourth__Choose-Your-Plan--container-content font__400-16 color__black">Customize Home dashboard and access extra widgets</div></div>
+                    <div class="section-fourth__Choose-Your-Plan--container-line display__center margin__28"><div class="section-fourth__Choose-Your-Plan--container-mark"></div><div class="section-fourth__Choose-Your-Plan--container-content font__400-16 color__black">Connect primary Google Calendar account</div></div>
+                    <div class="section-fourth__Choose-Your-Plan--container-line display__center margin__25"><div class="section-fourth__Choose-Your-Plan--container-mark"></div><div class="section-fourth__Choose-Your-Plan--container-content font__400-16 color__black">Add due dates, reminders, and notifications to your tasks</div></div>
+                    <button class="section-fourth__Choose-Your-Plan--container-button">Get Started</button>
                 </div>
-                <div class="section-fourth__Choose-Your-Plan--Organization">
-                    <p class="font__600-24 color__black margin__25">Organization</p>
-                    <p class="font__700-36 color__black margin__25">$49.99</p>
-                    <p class="font__500-18 color__black margin__25">Capture ideas and find them quickly</p>
-                    <p class="display__center font__400-16 color__black margin__28"><img class="circle-check" src="./assets/images/circle-check-Organization.png" />Sync unlimited devices</p>
-                    <p class="display__center font__400-16 color__black margin__28"><img class="circle-check" src="./assets/images/circle-check-Organization.png" />10 GB monthly uploads</p>
-                    <p class="display__center font__400-16 color__black margin__28"><img class="circle-check" src="./assets/images/circle-check-Organization.png" />200 MB max. note size</p>
-                    <p class="display__center font__400-16 color__black margin__28"><img class="circle-check" src="./assets/images/circle-check-Organization.png" />Customize Home dashboard and access extra widgets</p>
-                    <p class="display__center font__400-16 color__black margin__28"><img class="circle-check" src="./assets/images/circle-check-Organization.png" />Connect primary Google Calendar account</p>
-                    <p class="display__center font__400-16 color__black margin__25"><img class="circle-check" src="./assets/images/circle-check-Organization.png" />Add due dates, reminders, and notifications to your tasks</p>
-                    <button class="section-fourth__Choose-Your-Plan--Organization-button">Get Started</button>
+                <div class="section-fourth__Choose-Your-Plan--container-part">
+                    <div class="section-fourth__Choose-Your-Plan--container-title font__600-24 color__black margin__25">Organization</div>
+                    <div class="section-fourth__Choose-Your-Plan--container-title font__700-36 color__black margin__25">$49.99</div>
+                    <div class="section-fourth__Choose-Your-Plan--container-title font__500-18 color__black margin__25">Capture ideas and find them quickly</div>
+                    <div class="section-fourth__Choose-Your-Plan--container-line display__center margin__28"><div class="section-fourth__Choose-Your-Plan--container-mark"></div><div class="section-fourth__Choose-Your-Plan--container-content font__400-16 color__black">Sync unlimited devices</div></div>
+                    <div class="section-fourth__Choose-Your-Plan--container-line display__center margin__28"><div class="section-fourth__Choose-Your-Plan--container-mark"></div><div class="section-fourth__Choose-Your-Plan--container-content font__400-16 color__black">10 GB monthly uploads</div></div>
+                    <div class="section-fourth__Choose-Your-Plan--container-line display__center margin__28"><div class="section-fourth__Choose-Your-Plan--container-mark"></div><div class="section-fourth__Choose-Your-Plan--container-content font__400-16 color__black">200 MB max. note size</div></div>
+                    <div class="section-fourth__Choose-Your-Plan--container-line display__center margin__28"><div class="section-fourth__Choose-Your-Plan--container-mark"></div><div class="section-fourth__Choose-Your-Plan--container-content font__400-16 color__black">Customize Home dashboard and access extra widgets</div></div>
+                    <div class="section-fourth__Choose-Your-Plan--container-line display__center margin__28"><div class="section-fourth__Choose-Your-Plan--container-mark"></div><div class="section-fourth__Choose-Your-Plan--container-content font__400-16 color__black">Connect primary Google Calendar account</div></div>
+                    <div class="section-fourth__Choose-Your-Plan--container-line display__center margin__25"><div class="section-fourth__Choose-Your-Plan--container-mark"></div><div class="section-fourth__Choose-Your-Plan--container-content font__400-16 color__black">Add due dates, reminders, and notifications to your tasks</div></div>
+                    <button class="section-fourth__Choose-Your-Plan--container-button">Get Started</button>
                 </div>
             </div>
         </div>
@@ -187,17 +187,17 @@
                 <img class="position__absolute z-index__2 section-eighth__What-Our-Clients-Says--highlight-image" src="./assets/images/section-eighth__What-Our-Clients-Says--highlight-image.png" />
             </div>
             <div class="display__space-between section-eighth__What-Our-Clients-Says--container">
-                <div class="section-eighth__What-Our-Clients-Says--left">
-                    <div class="section-eighth__What-Our-Clients-Says--left-first margin__60"><img class="margin__32" src="./assets/images/quotes-left.png" /><p class="font__400-18 color__black margin__40">Whitepate is designed as a collaboration tool for businesses that is a full project management solution.</p></div>
-                    <div class="section-eighth__What-Our-Clients-Says--left-second display__space-between"><img class="avatar" src="./assets/images/avatar-left.png" /><div><p class="font__600-24 color__black margin__15">Oberon Shaw, MCH</p><p class="font__400-16 color__black margin__4">Head of Talent Acquisition, North America</p></div></div>
+                <div class="section-eighth__What-Our-Clients-Says--container-part">
+                    <div class="section-eighth__What-Our-Clients-Says--container-part-first margin__60"><div class="section-eighth__What-Our-Clients-Says--container-mark margin__32"></div><p class="section-eighth__What-Our-Clients-Says--container-content font__400-18 color__white margin__40">Whitepate is designed as a collaboration tool for businesses that is a full project management solution.</p></div>
+                    <div class="section-eighth__What-Our-Clients-Says--container-part-second display__space-between"><img class="section-eighth__What-Our-Clients-Says--container-avatar" src="./assets/images/section-eighth__What-Our-Clients-Says--avatar-first-image.png" /><div><p class="font__600-24 color__black margin__15">Oberon Shaw, MCH</p><p class="section-eighth__What-Our-Clients-Says--container-content font__400-16 color__white margin__4">Head of Talent Acquisition, North America</p></div></div>
                 </div>
-                <div class="section-eighth__What-Our-Clients-Says--center">
-                    <div class="section-eighth__What-Our-Clients-Says--center-first margin__60"><img class="margin__32" src="./assets/images/quotes-center.png" /><p class="font__400-18 color__white margin__40">Whitepate is designed as a collaboration tool for businesses that is a full project management solution.</p></div>
-                    <div class="section-eighth__What-Our-Clients-Says--center-second display__space-between"><img class="avatar" src="./assets/images/avatar-center.png" /><div><p class="font__600-24 color__black margin__15">Oberon Shaw, MCH</p><p class="font__400-16 color__white margin__4">Head of Talent Acquisition, North America</p></div></div>
+                <div class="section-eighth__What-Our-Clients-Says--container-part">
+                    <div class="section-eighth__What-Our-Clients-Says--container-part-first margin__60"><div class="section-eighth__What-Our-Clients-Says--container-mark margin__32"></div><p class="section-eighth__What-Our-Clients-Says--container-content font__400-18 color__white margin__40">Whitepate is designed as a collaboration tool for businesses that is a full project management solution.</p></div>
+                    <div class="section-eighth__What-Our-Clients-Says--container-part-second display__space-between"><img class="section-eighth__What-Our-Clients-Says--container-avatar" src="./assets/images/section-eighth__What-Our-Clients-Says--avatar-second-image.png" /><div><p class="font__600-24 color__black margin__15">Oberon Shaw, MCH</p><p class="section-eighth__What-Our-Clients-Says--container-content font__400-16 color__white margin__4">Head of Talent Acquisition, North America</p></div></div>
                 </div>
-                <div class="section-eighth__What-Our-Clients-Says--right">
-                    <div class="section-eighth__What-Our-Clients-Says--right-first margin__60"><img class="margin__32" src="./assets/images/quotes-right.png" /><p class="font__400-18 color__white margin__40">Whitepate is designed as a collaboration tool for businesses that is a full project management solution.</p></div>
-                    <div class="section-eighth__What-Our-Clients-Says--right-second display__space-between"><img class="avatar" src="./assets/images/avatar-right.png" /><div><p class="font__600-24 color__black margin__15">Oberon Shaw, MCH</p><p class="font__400-16 color__white margin__4">Head of Talent Acquisition, North America</p></div></div>
+                <div class="section-eighth__What-Our-Clients-Says--container-part">
+                    <div class="section-eighth__What-Our-Clients-Says--container-part-first margin__60"><div class="section-eighth__What-Our-Clients-Says--container-mark margin__32"></div><p class="section-eighth__What-Our-Clients-Says--container-content font__400-18 color__white margin__40">Whitepate is designed as a collaboration tool for businesses that is a full project management solution.</p></div>
+                    <div class="section-eighth__What-Our-Clients-Says--container-part-second display__space-between"><img class="section-eighth__What-Our-Clients-Says--container-avatar" src="./assets/images/section-eighth__What-Our-Clients-Says--avatar-third-image.png" /><div><p class="font__600-24 color__black margin__15">Oberon Shaw, MCH</p><p class="section-eighth__What-Our-Clients-Says--container-content font__400-16 color__white margin__4">Head of Talent Acquisition, North America</p></div></div>
                 </div>
             </div>
         </div>
