laminh - update dots section 8

--- a/index.html
+++ b/index.html
@@ -200,6 +200,9 @@
                     <div class="section-eighth__What-Our-Clients-Says--container-part-second display__space-between"><img class="section-eighth__What-Our-Clients-Says--container-avatar" src="./assets/images/section-eighth__What-Our-Clients-Says--avatar-third-image.png" /><div><p class="font__600-24 color__black margin__15">Oberon Shaw, MCH</p><p class="section-eighth__What-Our-Clients-Says--container-content font__400-16 color__white margin__4">Head of Talent Acquisition, North America</p></div></div>
                 </div>
             </div>
+            <div class="section-eighth__What-Our-Clients-Says--dots">
+              
+            </div>
         </div>
     </section>
 </body>
