--- a/index.html
+++ b/index.html
@@ -81,7 +81,22 @@
       </div>
 
       <div class="about__container">
-        <img src="./assets/images/img-about_circle.png" alt="" />
+        <div class="about__container--img">
+          <div class="about__container--ellipse-5">
+            <img src="./assets/images/img-about_logo.png" alt="" />
+            <div class="about__container--group-291"></div>
+            <div class="about__container--group-292"></div>
+            <div class="about__container--group-293"></div>
+            <div class="about__container--group-294"></div>
+            <div class="about__container--group-295"></div>
+          </div>
+          <div class="about__container--ellipse-6">
+            <div class="about__container--group-296"></div>
+            <div class="about__container--group-297"></div>
+            <div class="about__container--group-298"></div>
+            <div class="about__container--group-299"></div>
+          </div>
+        </div>
 
         <div class="about__work">
           <div class="about__work--together">
@@ -237,7 +252,7 @@
           </p>
           <img src="./assets/images/img-apps_element.png" alt="" />
         </div>
-        <a href="" class="btn"
+        <a href="#" class="btn"
           >Read more
           <i class="bx bx-right-arrow-alt"></i>
         </a>
