commit doProduct responsive 3 5%

--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
     <header class="header">
       <img src="./assets/images/img-header_logo.png" />
 
+      <i class="bx bx-menu" id="menu-icon"></i>
+
       <nav class="navbar">
         <a href="#"
           >Product
@@ -82,8 +84,9 @@
 
       <div class="about__container">
         <div class="about__container--img">
+          <img src="./assets/images/img-about_logo.png" alt="" />
+
           <div class="about__container--ellipse-5">
-            <img src="./assets/images/img-about_logo.png" alt="" />
             <div class="about__container--group-291"></div>
             <div class="about__container--group-292"></div>
             <div class="about__container--group-293"></div>
@@ -340,5 +343,7 @@
         </div>
       </div>
     </section>
+
+    <script src="./js/index.js"></script>
   </body>
 </html>
