THANHDI-DO REPONSIVE 20%

--- a/code/code/index.html
+++ b/code/code/index.html
@@ -53,6 +53,7 @@
         <div class="section_2_text">
             <ul>
                 <li>
+                    <img class="img-underlined" src="/code/code/img/img_element-text.png">
                     <h1>Project Management</h1>
                 </li>
                 <li>
@@ -62,7 +63,7 @@
                     <a href="#">Get Started<i class="gg-chevron-right"></i></a>
                 </li>
                 <li class="section_2_text_backgroud">
-                    <!-- <img src="/img/Work Together Image.png" width="661px" height="661px"> -->
+                    <img src="/code/code/img/Work Together Image.png" width="661px" height="661px">
                 </li>
             </ul>
         </div>
