commit doPortfolio responsive

--- a/index.html
+++ b/index.html
@@ -18,27 +18,30 @@
     <header class="header">
       <img src="./assets/images/img-header_logo.png" />
 
-      <i class="bx bx-menu" id="menu-icon"></i>
-
       <nav class="navbar">
-        <a href="#"
-          >Product
-          <div class="bx bx-chevron-down" id="down-icon"></div>
-        </a>
-        <a href="#"
-          >Solutions
-          <div class="bx bx-chevron-down" id="down-icon"></div>
-        </a>
-        <a href="#"
-          >Resources
-          <div class="bx bx-chevron-down" id="down-icon"></div>
-        </a>
-        <a href="#"
-          >Pricing
-          <div class="bx bx-chevron-down" id="down-icon"></div>
-        </a>
-        <a href="#" class="login">Login</a>
-        <a href="#" class="whitespace">Try whitespace free</a>
+        <div class="navbar__menu">
+          <a href="#"
+            >Product
+            <div class="bx bx-chevron-down" id="down-icon"></div>
+          </a>
+          <a href="#"
+            >Solutions
+            <div class="bx bx-chevron-down" id="down-icon"></div>
+          </a>
+          <a href="#"
+            >Resources
+            <div class="bx bx-chevron-down" id="down-icon"></div>
+          </a>
+          <a href="#"
+            >Pricing
+            <div class="bx bx-chevron-down" id="down-icon"></div>
+          </a>
+        </div>
+        <div class="navbar__btn">
+          <a href="#" class="login">Login</a>
+          <a href="#" class="whitespace">Try whitespace free</a>
+          <i class="bx bx-menu" id="menu-icon"></i>
+        </div>
       </nav>
     </header>
 
