--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="./Css/Index.css" />
+    <script
+      src="https://kit.fontawesome.com/355fe2010e.js"
+      crossorigin="anonymous"
+    ></script>
     <title>Document</title>
   </head>
   <body>
@@ -18,19 +22,19 @@
           <div class="first-section__top-header__right-side">
             <ul class="first-section__top-header__right-side__list-function">
               <li>
-                <h1>Product</h1>
+                <h4>Product</h4>
                 <img src="./Icon/icon_arrow-down.png" />
               </li>
               <li>
-                <h1>Solutions</h1>
+                <h4>Solutions</h4>
                 <img src="./Icon/icon_arrow-down.png" />
               </li>
               <li>
-                <h1>Resources</h1>
+                <h4>Resources</h4>
                 <img src="./Icon/icon_arrow-down.png" />
               </li>
               <li>
-                <h1>Pricing</h1>
+                <h4>Pricing</h4>
                 <img src="./Icon/icon_arrow-down.png" />
               </li>
             </ul>
@@ -40,15 +44,19 @@
                 class="first-section__top-header__right-side__list-button__btn-login"
                 href="#"
               >
-                <h3>Login</h3>
+                <h4>Login</h4>
               </a>
               <a
                 class="first-section__top-header__right-side__list-button__btn-register"
                 href="#"
               >
-                <h3>Try Whitespace free</h3>
+                <h4>Try Whitespace free</h4>
                 <img src="./Icon/icon_arrow-next.png" />
               </a>
+            </div>
+
+            <div class="first-section__top-header__right-side__toggle">
+              <i class="fa-solid fa-bars fa-2xl"></i>
             </div>
           </div>
         </nav>
@@ -437,6 +445,7 @@
 
           <div class="eighth-section__first-content__list-board">
             <div
+              id="slider-1"
               class="eighth-section__first-content__list-board__child-board-1"
             >
               <img src="./Image/img_quote-black.png" />
@@ -466,6 +475,7 @@
             </div>
 
             <div
+              id="slider-2"
               class="eighth-section__first-content__list-board__child-board-2"
             >
               <img src="./Image/img_quote-black.png" />
@@ -495,6 +505,7 @@
             </div>
 
             <div
+              id="slider-3"
               class="eighth-section__first-content__list-board__child-board-3"
             >
               <img src="./Image/img_quote-black.png" />
@@ -523,11 +534,10 @@
               </div>
             </div>
           </div>
-
           <div class="eighth-section__first-content__slider">
-            <button></button>
-            <button></button>
-            <button></button>
+            <a href="#slider-1"></a>
+            <a href="#slider-2"></a>
+            <a href="#slider-3"></a>
           </div>
         </div>
       </section>
