commit doProduct responsive

--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
 
       <nav class="navbar">
         <div class="navbar__menu">
-          <a href="#"
-            >Product
+          <a href="#" class="active"
+            >Products
             <div class="bx bx-chevron-down" id="down-icon"></div>
           </a>
           <a href="#"
